# pyavalon

./: README.md  pyproject.toml
.github/workflows/: tests.yml
fixtures/: bad-captions.vtt
pyavalon/: __init__.py  pyavalon.py
pyavalon/avalon/: __init__.py  avalon.py
pyavalon/pdf/: __init__.py  pdf.py
tests/: test_supplementals.py
