[tool.poetry]
name = "pyavalon"
version = "0.1.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
tqdm = "^4.67.1"
fpdf = "^1.7.2"
weasyprint = "^66.0"
click = "^8.2.1"

[tool.poetry.scripts]
pyavalon = "pyavalon.pyavalon:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
