[tool.poetry]
name = "pyavalon"
version = "0.1.2"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
readme = "README.md"

include = [
    "pyavalon/pdf/fonts/*",
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.4"
tqdm = "^4.67.1"
fpdf = "^1.7.2"
weasyprint = "^66.0"
click = "^8.2.1"
ruff = "^0.12.11"
webvtt-py = "^0.5.1"
pytest = "^8.4.2"

[tool.poetry.scripts]
pyavalon = "pyavalon.pyavalon:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
